# sshTool

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  ssh_util.rs  sshpass
