[package]
name = "ssh_tool"
version = "0.1.0"
authors = ["rookie <gb880327@189.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
toml = "0.5.8"
serde_derive = "1.0.125"
serde = "1.0.125"
dialoguer = "0.8.0"